--- a/index.html
+++ b/index.html
@@ -267,13 +267,12 @@ pre[data-line] .line-highlight[data-end]:after {
 <p>[TODO: add video here]</p>
 <h3 class="mume-header" id="links">Links</h3>
 
-<p><img src alt> <a href="https://github.com/made-iit/plg">GitHub repository</a><br>
-<img src alt> <a href>Paper</a><br>
-<img src alt> <a href>Paper preprint</a></p>
+<h5 class="mume-header" id="source-fileshttpsgithubcommade-iitplg---preprint---paper---bibtex"><a href="https://github.com/made-iit/plg">Source files</a> - <a href>Preprint</a> - <a href>Paper</a> - <a href>Bibtex</a></h5>
+
 <p>[TODO: fix links]</p>
 <h3 class="mume-header" id="abstract">Abstract</h3>
 
-<p>The present paper describes the design, fabrication and validation of a push-latch gripper produced via Additive Manufacturing, which is capable of performing planar grasps of objects with two opposite parallel  surfaces. In particular, the gripper modes of operation are presented, along with an efficient virtual prototype of the system based on a Pseudo-Rigid Body approximation. Such model is proven to be considerably more computationally efficient as compared to the corresponding Finite Element simulation, while still accurately capturing the fundamental behaviors of the mechanism. Finally, quantitative performance assessments are reported to practically show how Fused Filament Fabrication of Nylon components can be an excellent approach for creating monolithic robotic mechanisms with <strong>embodied intelligence</strong> that can be effectively employed for pick and place operations. Furthermore, this work represents one further example of an alternative approach to  mechanisms development that combines part minimization, faster design iterations, and high repeatability.</p>
+<p>The present paper describes the design, fabrication and validation of a push-latch gripper produced via Additive Manufacturing, which is capable of performing planar grasps of objects with two opposite parallel  surfaces. In particular, the gripper modes of operation are presented, along with an efficient virtual prototype of the system based on a Pseudo-Rigid Body approximation. Such model is proven to be considerably more computationally efficient as compared to the corresponding Finite Element simulation, while still accurately capturing the fundamental behaviors of the mechanism. Finally, quantitative performance assessments are reported to practically show how Fused Filament Fabrication of Nylon components can be an excellent approach for creating monolithic robotic mechanisms with <em>embodied intelligence</em> that can be effectively employed for pick and place operations. Furthermore, this work represents one further example of an alternative approach to  mechanisms development that combines part minimization, faster design iterations, and high repeatability.</p>
 
       </div>
       
