--- a/index.html
+++ b/index.html
@@ -264,10 +264,14 @@ pre[data-line] .line-highlight[data-end]:after {
       <h1 class="mume-header" id="design-and-validation-of-a-push-latch-gripper-made-in-additive-manufacturing">Design and Validation of a Push-Latch Gripper Made in Additive Manufacturing</h1>
 
 <p>Emilio Ottonello, Mario Baggetta, Giovanni Berselli, and Alberto Parmiggiani</p>
-<p>[TODO: add video here]</p>
+            
+<video width="400" controls>
+  <source src="/media/demo_pick_and_place.mp4" type="video/mp4">
+</video>
+
 <h3 class="mume-header" id="links">Links</h3>
 
-<h5 class="mume-header" id="source-fileshttpsgithubcommade-iitplg---preprint---paper---bibtex"><a href="https://github.com/made-iit/plg">Source files</a> - <a href>Preprint</a> - <a href>Paper</a> - <a href>Bibtex</a></h5>
+<h5 class="mume-header" id="source-fileshttpsgithubcommade-iitplg---preprint---paper---bibtex"><a href="https://github.com/made-iit/plg">Source files</a> - <a href="https://github.com/made-iit/plg/blob/main/media/preprint_push-latch.pdf">Preprint</a> - <a href="https://ieeexplore.ieee.org/document/10145474">Paper</a> - <a href="https://github.com/made-iit/plg/tree/main/media/bibtex.bib">Bibtex</a></h5>
 
 <p>[TODO: fix links]</p>
 <h3 class="mume-header" id="abstract">Abstract</h3>
