--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <h3 class="mume-header" id="links">Links</h3>
 
-<h5 class="mume-header" id="source-fileshttpsgithubcommade-iitplg---preprint---paper---bibtex"><a href="https://github.com/made-iit/plg">Source files</a> - <a href="https://github.com/made-iit/plg/blob/main/media/preprint_push-latch.pdf">Preprint</a> - <a href="https://ieeexplore.ieee.org/document/10145474">Paper</a> - <a href="https://github.com/made-iit/plg/tree/main/media/bibtex.bib">Bibtex</a></h5>
+<h5 class="mume-header" id="source-fileshttpsgithubcommade-iitplg---preprint---paper---bibtex"><a href="https://github.com/made-iit/plg/tree/main/hardware">Source files</a> - <a href="https://github.com/made-iit/plg/blob/main/media/preprint_push-latch.pdf">Preprint</a> - <a href="https://ieeexplore.ieee.org/document/10145474">Paper</a> - <a href="https://github.com/made-iit/plg/tree/main/media/bibtex.bib">Bibtex</a></h5>
 
 <p>[TODO: fix links]</p>
 <h3 class="mume-header" id="abstract">Abstract</h3>
