--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="crossnote markdown-preview  ">
       <h1 class="crossnote-header" id="design-and-validation-of-a-push-latch-gripper-made-in-additive-manufacturing">Design and Validation of a Push-Latch Gripper Made in Additive Manufacturing</h1>
 
-<hr>
+<hr style="height:1px"> 
 <p>Emilio Ottonello, Mario Baggetta, Giovanni Berselli, and Alberto Parmiggiani</p>
 <p><video width="100%" src=".media/demo_pick_and_place.mp4" controls="" title="PLG"></video></p>
 <h3 class="crossnote-header" id="links">Links</h3>
@@ -30,8 +30,8 @@
 <h3 class="crossnote-header" id="abstract">Abstract</h3>
 
 <p>The present paper describes the design, fabrication and validation of a push-latch gripper produced via Additive Manufacturing, which is capable of performing planar grasps of objects with two opposite parallel  surfaces. In particular, the gripper modes of operation are presented, along with an efficient virtual prototype of the system based on a Pseudo-Rigid Body approximation. Such model is proven to be considerably more computationally efficient as compared to the corresponding Finite Element simulation, while still accurately capturing the fundamental behaviors of the mechanism. Finally, quantitative performance assessments are reported to practically show how Fused Filament Fabrication of Nylon components can be an excellent approach for creating monolithic robotic mechanisms with <em>embodied intelligence</em> that can be effectively employed for pick and place operations. Furthermore, this work represents one further example of an alternative approach to  mechanisms development that combines part minimization, faster design iterations, and high repeatability.</p>
+<hr style="height:1px"> 
 <p><strong>Published in IEEE/ASME Transactions on Mechatronics - 1083-4435 © 2023 IEEE</strong></p>
-<hr>
 
       </div>
       
