fixing links (maybe...)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <hr style="height:1px"> 
 <p>Emilio Ottonello, Mario Baggetta, Giovanni Berselli, and Alberto Parmiggiani</p>
-<p><video width="100%" src=".media/demo_pick_and_place.mp4" controls="" title="PLG"></video></p>
+<p><video width="100%" src="media/demo_pick_and_place.mp4" controls=""></video></p>
 <h3 class="crossnote-header" id="links">Links</h3>
 
 <h5 class="crossnote-header" id="source-fileshttpsgithubcommade-iitplgtreemainhardware---preprinthttpsgithubcommade-iitplgrawmainmediapreprint_push-latchpdf---paperhttpsieeexploreieeeorgdocument10145474---bibtexhttpsgithubcommade-iitplgrawmainmediabibtexbib"><a href="https://github.com/made-iit/plg/tree/main/hardware">Source files</a> - <a href="https://github.com/made-iit/plg/raw/main/media/preprint_push-latch.pdf">Preprint</a> - <a href="https://ieeexplore.ieee.org/document/10145474">Paper</a> - <a href="https://github.com/made-iit/plg/raw/main/media/bibtex.bib">Bibtex</a></h5>
